--- a/client/src/components/savedCards/style.css
+++ b/client/src/components/savedCards/style.css
@@ -18,8 +18,32 @@
   width: 2rem;
 }
 
-.card-body h6 {
+.card h5 {
+  font-size: 1rem;
+  text-align: center;
+  margin: 0.2rem;
+}
+
+.card h6 {
+  font-size: 0.75rem;
+  text-align: center;
+  margin: 0.2rem;
+}
+
+.common {
+  color: grey;
+}
+
+.uncommon {
   color: green;
+}
+
+.rare {
+  color: blue;
+}
+
+.legendary {
+  color: orange;
 }
 
 #deleteIcon img:hover {
