--- a/client/src/pages/home.css
+++ b/client/src/pages/home.css
@@ -11,6 +11,42 @@ h1 {
   font-family: "Bungee";
 }
 
+.parent-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.btn {
+  width: 200px;
+}
+
+.parent-container p {
+  background-color: white;
+  padding: 0.5rem;
+  margin: 1rem;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.openPackBtn {
+  position: inline-block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.packImg {
+  z-index: 0;
+  margin: auto;
+}
+.openPackBtn .btn {
+  z-index: 1;
+  position: relative;
+  top: -220px;
+  width: 100px;
+}
+
 .card {
   margin: 3rem;
   min-width: 15rem;
@@ -19,6 +55,11 @@ h1 {
 .card:hover .card-img-top {
   transition: 0.5s;
   filter: brightness(50%);
+}
+
+.openPackBtn button:hover {
+  color: #ffc600;
+  background-color: black;
 }
 
 .card h2 {
@@ -30,9 +71,25 @@ h1 {
 .card h3 {
   font-size: 0.75rem;
   text-align: center;
-  color: green;
   margin: 0.2rem;
 }
+
+.common {
+  color: grey;
+}
+
+.uncommon {
+  color: green;
+}
+
+.rare {
+  color: blue;
+}
+
+.legendary {
+  color: orange;
+}
+
 .card-container {
   display: flex;
   justify-content: center;
