--- a/client/src/pages/SignupLogin.css
+++ b/client/src/pages/SignupLogin.css
@@ -1,22 +1,26 @@
-.form-input {
-    background: #fffc79;
-    color: #646cff;
-    display: flex;
-    padding: 1rem;
-    margin-left: 37.5vw;
-    margin-top: 5vh;
-    border: none;
-    border-radius: 7.5px;
-    box-shadow: 5px 5px 5px 5px black;
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 600px;
 }
 
-button{
-    background-color: #fffc79;
-    color: #646cff;
-    margin-left: 45vw;
-    margin-top: 6vh;
-    padding: 0.5rem;
-    border: none;
-    border-radius: 7.5px;
-    box-shadow: 5px 5px 5px 5px black;
+.form-input {
+  background: #fffc79;
+  color: #646cff;
+  margin: 20px;
+  padding: 1rem;
+  border: none;
+  border-radius: 7.5px;
+  box-shadow: 5px 5px 5px 5px black;
+}
+
+button {
+  background-color: #fffc79;
+  margin: 20px auto;
+  color: #646cff;
+  padding: 0.5rem;
+  border: none;
+  border-radius: 7.5px;
+  box-shadow: 5px 5px 5px 5px black;
 }
