it works just have to make it work on the front end

--- a/client/src/components/savedCards/style.css
+++ b/client/src/components/savedCards/style.css
@@ -46,10 +46,14 @@
   color: orange;
 }
 
-#deleteIcon img:hover {
+.options img:hover {
   cursor: pointer;
 }
 
-#deleteIcon p {
+.options #delete p {
   color: red;
+}
+
+.options #trade p {
+  color:green;
 }
