Revert "it works just have to make it work on the front end"
This reverts commit 6a7d7f060bc981ff7fe9cbce1dfe8a6b695b4c24.

--- a/client/src/components/savedCards/style.css
+++ b/client/src/components/savedCards/style.css
@@ -46,14 +46,10 @@
   color: orange;
 }
 
-.options img:hover {
+#deleteIcon img:hover {
   cursor: pointer;
 }
 
-.options #delete p {
+#deleteIcon p {
   color: red;
-}
-
-.options #trade p {
-  color:green;
 }
