--- a/client/src/components/collection/style.css
+++ b/client/src/components/collection/style.css
@@ -6,3 +6,37 @@
   align-items: center;
   flex-wrap: wrap;
 }
+
+.color-key {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.color-key-item {
+  display: flex;
+  align-items: center;
+  margin-right: 20px;
+}
+
+.color-key-item:last-child {
+  margin-right: 0;
+}
+
+.color-key-item div:first-child {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+}
+
+.color-key-item div:last-child {
+  color: white;
+}
+
+.dont-own {
+  background-color: yellow;
+}
+
+.own {
+  background-color: lightyellow;
+}
