--- a/client/src/pages/home.css
+++ b/client/src/pages/home.css
@@ -21,6 +21,14 @@ h2 {
   font-family: "Bungee";
 }
 
+.about {
+  color: #ffc600;
+  animation: aboutGlow 3s infinite;
+  margin: 20px;
+  border-radius: 20px;
+  padding: 5px 15px 15px 15px;
+}
+
 .parent-container {
   display: flex;
   flex-direction: column;
@@ -48,12 +56,27 @@ h2 {
 
 @keyframes glow {
   0% {
+    box-shadow: 0 0 5px #f95738, 0 0 10px #f95738, 0 0 15px #f95738,
+      0 0 20px #f95738;
+  }
+  100% {
+    box-shadow: 0 0 10px #f95738, 0 0 20px #f95738, 0 0 30px #f95738,
+      0 0 40px #f95738;
+  }
+}
+
+@keyframes aboutGlow {
+  0% {
     box-shadow: 0 0 5px #ff0000, 0 0 10px #ff0000, 0 0 15px #ff0000,
       0 0 20px #ff0000;
   }
-  100% {
+  50% {
     box-shadow: 0 0 10px #ff0000, 0 0 20px #ff0000, 0 0 30px #ff0000,
       0 0 40px #ff0000;
+  }
+  100% {
+    box-shadow: 0 0 5px #ff0000, 0 0 10px #ff0000, 0 0 15px #ff0000,
+      0 0 20px #ff0000;
   }
 }
 
