--- a/client/src/components/nav.css
+++ b/client/src/components/nav.css
@@ -6,6 +6,9 @@ nav {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  align-items: center;
+  background-color: #6c757d;
+  padding: 5px 0 10px 0;
 }
 
 nav a {
