--- a/client/src/components/trades/style.css
+++ b/client/src/components/trades/style.css
@@ -1,7 +1,17 @@
 .tradeContainer {
   color: white;
-  margin: 0 auto;
+  margin: auto;
   max-width: 600px;
+}
+
+.partial-line {
+  border-top: 3px solid #000000;
+  width: 75%;
+  margin: 0 auto 30px;
+}
+
+.tradeContainer h2 {
+  margin: 10px;
 }
 .trade-item {
   color: #f95738;
