--- a/client/src/components/collection/style.css
+++ b/client/src/components/collection/style.css
@@ -40,3 +40,11 @@
 .own {
   background-color: lightyellow;
 }
+
+.cardViewDont-own {
+  background-color: gray;
+}
+
+.cardViewOwn {
+  background-color: white;
+}
