--- a/client/src/components/nav.css
+++ b/client/src/components/nav.css
@@ -4,6 +4,16 @@
 
 nav {
   display: flex;
+  flex-direction: column;
+  background-color: #6c757d;
+  padding: 5px 0 10px 0;
+}
+h1 {
+  font-size: 64px;
+}
+
+.nav {
+  display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
@@ -11,7 +21,7 @@ nav {
   padding: 5px 0 10px 0;
 }
 
-nav a {
+.nav a {
   /* play with box shadow more */
   font-weight: bolder;
   border: #ffc600 2px solid;
@@ -24,6 +34,6 @@ nav a {
   /* transition:.5s; */
 }
 
-nav a:hover {
+.nav a:hover {
   box-shadow: 2px 2px 2px 2px black;
 }
